# netward-standalone-

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  example_config.json  pyproject.toml
.github/: FUNDING.yml
docs/: index.html  styles.css
netward/: __main__.py  capture.py  classify.py  cli.py  mesh.py  mirror.py  operator_layer.py  regex_policy.py  schema.py  storage.py  test_bootstrap.py  test_buyer_hygiene.py  test_capture.py  test_classify.py  test_integration.py  test_mirror.py  test_operator.py  test_regex_policy.py  test_schema.py  test_storage.py  test_vendor_patterns.py
netward/data/: vendor_patterns.json
tools/: loadgen.py
